# Grazel

./: build.gradle
.github/actions/android/: action.yml
.github/actions/bazel/: action.yml
.github/actions/gradle/: action.yml
.github/workflows/: ci.yml
flavors/sample-android-flavor/: BUILD.bazel
flavors/sample-android-flavor/src/test/java/com/grab/grazel/android/flavor/: FlavorTest.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/di/: GrazelComponent.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/gradle/dependencies/: ComputeWorkspaceDependencies.kt  Dependencies.kt  DependencyResolutionService.kt  TransitiveDependenciesStore.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/gradle/dependencies/model/: ResolveDependenciesResult.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/gradle/variant/: CompressionResult.kt  UnitTestVariantCompressor.kt  VariantCompressionEngine.kt  VariantCompressionResult.kt  VariantCompressionService.kt  VariantCompressor.kt  VariantModule.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/migrate/android/: AndroidUnitTestDataExtractor.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/tasks/internal/: AnalyzeVariantCompressionTask.kt  ComputeWorkspaceDependenciesTask.kt
grazel-gradle-plugin/src/test/kotlin/com/grab/grazel/gradle/: DefaultDependenciesDataSourceTest.kt
grazel-gradle-plugin/src/test/kotlin/com/grab/grazel/gradle/variant/: UnitTestVariantCompressorTest.kt
sample-android/: BUILD.bazel
sample-android-library/: BUILD.bazel
sample-android-tests/: BUILD.bazel
