load("@grab_bazel_common//rules:defs.bzl", "android_library", "android_unit_test")

android_library(
    name = "sample-android-flavor-demo-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "demo": {
            "res": "src/demo/res",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-demo-free-staging",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "demo": {
            "res": "src/demo/res",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-demo-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "demo": {
            "res": "src/demo/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-demo-paid-staging",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "demo": {
            "res": "src/demo/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "full": {
            "res": "src/full/res",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-free-staging",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "full": {
            "res": "src/full/res",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "full": {
            "res": "src/full/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-paid-staging",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "generated_value": "generated",
        },
    },
    resource_sets = {
        "full": {
            "res": "src/full/res",
        },
        "main": {
            "res": "src/main/res",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_unit_test(
    name = "sample-android-flavor-test",
    size = "medium",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/flavor/FlavorTest.kt",
    ]),
    associates = [
        "//flavors/sample-android-flavor:sample-android-flavor-demo-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.flavor",
    enable_compose = True,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-android-flavor:sample-android-flavor-demo-free-debug",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
        "@maven//:junit_junit",
    ],
)
